# bookcollector

./: .flake  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app_1/api/commands/: get_books_command.py
src/app_1/api/routes/: books.py
src/app_1/api/services/: book_service.py
src/app_1/domain/adapters/: orders.py
src/app_1/domain/models/: books.py  orders.py
src/app_1/domain/repositories/: book_repository.py
src/portal/: alembic.ini  bootstrap.py  config.py  main.py
src/portal/adapters/: mapping.py  repository.py
src/portal/domain/: commands.py  models.py
src/portal/endpoints/: routes.py
src/portal/infrastructure/: serializers.py
src/portal/infrastructure/migrations/versions/: 2022_11_07_1815-ca93c74c6e4e_002_add_dumy_data.py  20b91223c052_001_initial.py
src/portal/migrations/: env.py
src/portal/migrations/versions/: 719f0a664ad4_.py  aa3ed46f3bc2_.py
src/portal/services/: command_bus.py  handlers.py  unit_of_work.py
src/portal/utils/: error_handling.py  exceptions.py
src/root/api/: app.py
tests/test_orders/: test_batches.py  test_orders.py
