[tool.poetry]
name = "testfastapi"
version = "0.1.0"
description = "Testing the fastapi posibilites"
authors = ["oskarkowalczyk <oskar.kowalczyk@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.62.0"
uvicorn = "^0.15.0"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
